# connector-building-blocks

./: .dockerignore  .env.datacellar-example  .env.http-pull-sample  .env.http-push-sample  .gitignore  Dockerfile  Dockerfile.edcpy  Dockerfile.http-pull-consumer-backend  Dockerfile.openjdk  README.md  Taskfile.yml  Vagrantfile  docker-compose-box-consumer.yml  docker-compose-box-provider.yml  docker-compose-consumer-hub-image.yml  docker-compose-consumer.yml  docker-compose-datacellar-example.yml  docker-compose-datacellar.yml  docker-compose-dev.yml  docker-compose-http-pull.yml  docker-compose-http-push.yml  docker-compose-keycloak.yml  docker-compose-minimal-consumer.yml  docker-compose-minimal-provider.yml  docker-compose-provider-hub-image.yml  docker-compose-provider-openjdk.yml  docker-compose-provider.yml  example.properties  run-connector.sh  test_binding.py
connector/: .dockerignore  build.gradle.kts  gradle.properties  settings.gradle.kts
connector-dc/: dataspaceconnector-configuration.properties  gradle.properties  settings.gradle.kts
datacellar-connector/: build.gradle.kts  gradle.properties  settings.gradle.kts
datacellar-mock-component/: Dockerfile  asyncapi.json  docker-compose.yml  event-api.py  http-api.py  main.py  requirements.txt
dev-config/: .env.dev.consumer  .env.dev.wallets  .gitignore  box-consumer.properties  box-provider.properties  catalog-nodes.json  dev-consumer.properties  dev-provider.properties  empty-catalog-query.json
diagrams/: http-pull-example.graffle  http-push-example.graffle
docs/: example-identity-vc.md  faqs.md  index.md  openapi-credential-checks.md
edcpy/: .pylintrc  README.md  pyproject.toml
edcpy/edcpy/: __init__.py  backend.py  config.py  edc_api.py  keycloak.py  main.py  message_handler.py  messaging.py  orchestrator.py  pull_backend.py  utils.py
edcpy/edcpy/models/: asset.py  contract_definition.py  contract_negotiation.py  data_plane_instance.py  policy_definition.py  transfer_process.py
edcpy/tests/: conftest.py  test_backend_startup.py  test_endpoints.py  test_messaging_interaction.py  test_sse_endpoints.py
example/: .env.consumer  .env.example  Vagrantfile  consumer.properties  docker-compose-consumer.yml  docker-compose-provider.yml  example_api_workflow.py  example_catalogue.py  example_http_pull.py  example_http_push.py  example_list_assets.py  example_parallel.py  example_pull.py  example_pull_sse.py  example_push.py  example_push_sse.py  keycloak-realm-export.json  provider.properties  provision-boxes.sh
http-pull-consumer-backend/: main.py  requirements.txt
mock-backend/: asyncapi.json  docker-compose.yml  http-api.py
mock-component/: event-api.py  http-api.py
scripts/: Dockerfile  contract-negotiation.json  create-certs.sh  generate-vault.sh  keystore-to-vault.sh  provision-common.sh  provision-consumer.sh  provision-keycloak.sh  provision-provider.sh  provision-wallets.py  requirements.txt  run-datacellar-sample.py  run-edc-sample.py  run-http-pull-sample.py  run-transfer-sample.py  transfer-process.json  upload-test-doc.sh
(+115 files in other folders)
